--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Welcome to Posting</h1>
     </header>
 
-    <div class="main-container">
+    <main class="main-container">
         <form id="blog-post-form">
             <div class="form-group">
                 <label for="postTitle">Post Title:</label>
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="post">Your Post:</label>
-                <textarea name="post" id="post" rows="5" cols="30" placeholder="Write your content"></textarea>
+                <textarea name="post" id="post" rows="5" cols="30" placeholder="Write your content" required></textarea>
                 <span class="error-message" id="postError"></span>
             </div>
             <button type="submit" id="submit">Post</button>
@@ -30,7 +30,7 @@
 
         <ul id="posts-list"></ul>
 
-    </div>
+    </main>
 
     <div class="footer">
         <footer>
