ul moved to a separated div

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <button type="submit" id="submit">Post</button>
         </form>
 
-        <ul id="posts-list"></ul>
-
     </main>
+
+    <div id="li-container">
+        <ul id="posts-list"></ul>
+    </div>
 
     <div class="footer">
         <footer>
