required attribute from inputs, so errors can be rendered

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <form id="blog-post-form">
             <div class="form-group">
                 <label for="postTitle">Post Title:</label>
-                <input type="text" name="postTitle" id="postTitle" placeholder="Enter your title" required>
+                <input type="text" name="postTitle" id="postTitle" placeholder="Enter your title">
                 <span class="error-message" id="titleError"></span>
             </div>
             <div class="form-group">
                 <label for="post">Your Post:</label>
-                <textarea name="post" id="post" rows="5" cols="30" placeholder="Write your content" required></textarea>
+                <textarea name="post" id="post" rows="5" cols="30" placeholder="Write your content"></textarea>
                 <span class="error-message" id="postError"></span>
             </div>
             <button type="submit" id="submit">Post</button>
